--- a/packages/uikit/views/navBar/components/navImage/navImage.module.scss
+++ b/packages/uikit/views/navBar/components/navImage/navImage.module.scss
@@ -1,5 +1,7 @@
+@import "../../../../theme/themeValues";
+
 .component {
-    height: var(--nav-height);
+    height: calc(var(--nav-height) - var(#{$theme+$padding}));
     aspect-ratio: 1 / 1;
     border-radius: 0;
 }
