--- a/packages/uikit/views/sidebar/Sidebar.module.scss
+++ b/packages/uikit/views/sidebar/Sidebar.module.scss
@@ -8,18 +8,23 @@
 .component {
   height: 100%;
   background: var(#{$theme+$background});
-  border: 0;
-  padding: 0;
   pointer-events: none;
   opacity: 0;
+  border: var(#{$theme+$border});
+  border-top: 0;
+  border-bottom: 0;
+  border-left: 0;
   flex-direction: column;
-  max-width: 0rem;
   max-height: 100%;
-  transition: max-width var(#{$theme+$transition+$transition}), max-height var(#{$theme+$transition+$transition});
+  max-width: 0;
+  transition: transform var(#{$theme+$transition+$transition}), max-height var(#{$theme+$transition+$transition});
+  transform: translateX(-100%);
+  visibility: hidden;
+  padding: 0;
 
   @media (max-width: $sizeTablet) {
     max-width: 100%;
-    max-height: 0rem;
+    max-height: 0;
     height: max-content;
   }
 
@@ -31,17 +36,12 @@
 .open {
   pointer-events: all;
   opacity: 1;
-  padding: var(#{$theme+$padding});
-  border: var(#{$theme+$border});
-  border-top: 0;
+  transform: translateX(0);
+  visibility: visible;
   max-width: 32rem;
-  border-bottom: 0;
-  border-left: 0;
-  max-height: 100%;
+  padding: var(#{$theme+$padding});
 
   @media (max-width: $sizeTablet) {
-    max-width: 100%;
-    max-height: 32rem;
     height: max-content;
   }
 }
